postgresql-common (25) unstable; urgency=low

  *

 -- Martin Pitt <mpitt@debian.org>  Mon, 29 Aug 2005 11:53:56 +0200

postgresql-common (24) unstable; urgency=low

  * Add /usr/share/postgresql-common/pg_checksystem: Check system parameters
    which are relevant to PostgreSQL. Right now this checks if write caching
    is enabled on any disk containing PostgreSQL clusters.
  * debian/postgresql-common.postinst: Call pg_checksystem. Closes: #318928
  * Bump Standards-Version to 3.6.2.
  * debian/postgresql-common.postinst: Setup user 'postgres' with /bin/bash as
    default shell. Closes: #320810
  * pg_wrapper, debian/postgresql-common.links: Wrap reindexdb, it is a
    standard client program in 8.1.
  * pg_createcluster: Do not create autovacuum log file for servers >= 8.1.
  * PgCommon.pm: For determining avac_enable on 8.1+ servers, read
    "autovacuum" setting from postgresql.conf.
  * pg_maintenance: Use avac_enable flag instead of checking for the
    pg_autovacuum pid file to determine whether autovacuuming is enabled. This
    is a more general approach and works for all server versions.
  * pg_ctlcluster: Do not attempt to start pg_autovacuum on 8.1+ servers.
  * pg_createcluster: Add hook for version specific function to configure
    postgresql.conf.
  * pg_createcluster: Add default configuration for 7.4 clusters:
    - tcpip_socket = true
    - stats_row_level = true
  * pg_createcluster: Add default configuration for 8.0 clusters:
    - listen_addresses = '*'
    - stats_row_level = true
  * pg_createcluster: Add default configuration for 8.1 clusters:
    - listen_addresses = '*'
    - stats_row_level = on
    - autovacuum = on
  * PgCommon.pm, set_conf_value(): Preserve comments.
  * debian/postgresql-common.postinst: Generalized restarting of all clusters
    to make it automatically work for future versions.
  * pg_createcluster: Adapt pg_hba.conf to the current default (md5 for host