@@ -1,8 +1,16 @@
 postgresql-common (25) unstable; urgency=low
 
-  *
+  * PgCommon.pm, get_cluster_socketdir():
+    - If the socket directory is configured in postgresql.conf, use it right
+      away instead of doing experiments before.
+    - Improved sanity checking.
+    - Error out if the data directory cannot be stat'ed, since we cannot
+      determine a sensible directory in this case.
+  * pg_upgradecluster: Don't call cluster_info() on the yet nonexistant
+    new cluster, just check for the data directory for determining if the new
+    cluster already exists.
 
- -- Martin Pitt <mpitt@debian.org>  Mon, 29 Aug 2005 11:53:56 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 30 Aug 2005 23:31:44 +0200
 
 postgresql-common (24) unstable; urgency=low
 
